--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
     </header>
 
     <div class="flex-container grid">
-        <h2 id="aboutme">About Me</h2>
-        <img src="../portfolio_3/assets/images/IMG_1598.JPG"  alt="girl at work with mask" width="100" height="200">
+        <h2>About Me</h2>
+        <img class=pic src="../portfolio_3/assets/images/IMG_1598.JPG"  alt="girl at work with mask" width="100" height="200">
           <p>My name is Stephanie Apodaca.  I am a single mom and currently work for Kaiser Permanente, San Diego.
               I have been interested in accomplishing a coding bootcamp for a few years, I was recently given the opportunity
               to attend one.  I enjoy photography and dog rescue. I look forward to improving on my portfolio. 
           </p>
         <h2>Work</h2>
-          <p id="work" id="grid">
-              <img src="../portfolio_3/assets/images/blue.jpeg" alt="blue themed flowers" width="300" height="300">
-              <img src="../portfolio_3/assets/images/cake.jpeg" alt="cake on plate" width="300" height="300">
-              <img src="../portfolio_3/assets/images/drink.jpeg" alt="pineapple fruit in cup" width="300" height="300">
-              <img src="../portfolio_3/assets/images/tequila.jpeg" alt="Bottle of tequila" width="300" height="300">
+          <p id="grid">
+              <img class=active src="../portfolio_3/assets/images/blue.jpeg" alt="blue themed flowers" width="300" height="300">
+              <img class=active src="../portfolio_3/assets/images/cake.jpeg" alt="cake on plate" width="300" height="300">
+              <img class=active src="../portfolio_3/assets/images/drink.jpeg" alt="pineapple fruit in cup" width="300" height="300">
+              <img class=active src="../portfolio_3/assets/images/tequila.jpeg" alt="Bottle of tequila" width="300" height="300">
           </p>
-        <h2 id="contact">Contact</h2>
+        <h2>Contact</h2>
           
-          <p>Phone:<a href="tel:9512009636"> 951-200-9636</a>
-             Email:<a href="sjapodaca1103@gmail.com"> sjapodaca1103@gmail.com</a> 
-             Github: <a href="https://github.com/StephJosie"> Github </a>
+          <p>Phone:<a class=highlight href="tel:9512009636"> 951-200-9636</a>
+             Email:<a class=highlight href="sjapodaca1103@gmail.com"> sjapodaca1103@gmail.com</a> 
+             Github: <a class=highlight href="https://github.com/StephJosie"> Github </a>
             
         </p>
 
-        <h2 id="resume">Resume</h2>
+        <h2>Resume</h2>
           <p>Add resume here</p
             >
     </div>
