--- a/index.html
+++ b/index.html
@@ -1,66 +1,233 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Stephanie Apodaca</title>
-  <link rel="stylesheet" href="./assets/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../Portfolio/assets/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-chevron-right"
+    viewBox="0 0 16 16">
+    <path fill-rule="evenodd"
+      d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+  </svg>
 
-</head>
+  <title>Stephanie Apodaca</title>
+
+
+
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutme">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 <body>
-  <header class="header">
-    <h1 class="transbox">Stephanie Apodaca</h1>
-    <nav class="navbar">
 
-      <a href="#aboutme">About Me</a>
-      <a href="#work">Work</a>
-      <a href="#contact">Contact</a>
-      <a href="#resume">Resume</a>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card text-center border-0">
 
-    </nav>
-  </header>
+          <div class="card-body">
+            <h1 class="card-title">Hi... I'm Steph!</h1>
+            <p class="card-text">I am a brand new web designer</p>
+          </div>
+        </div>
 
-  <div class="flex-container grid">
-    <h2 id="aboutme">About Me</h2>
-    <img class=pic src="../portfolio_3/assets/images/IMG_1598.JPG" alt="girl at work with mask" width="100"
-      height="200">
-    <p>My name is Stephanie Apodaca. I am a single mom and currently work for Kaiser Permanente, San Diego.
-      I have been interested in accomplishing a coding bootcamp for a few years, I was recently given the opportunity
-      to attend one. I enjoy photography and dog rescue. I look forward to improving on my portfolio.
-    </p>
-    <h2 id="work">Work</h2>
-    <p id="grid">
-      <a href="https://nmbeilke.github.io/Git-Cooking/">
-        <img class=active src="../portfolio_3/assets/images/blue.jpeg" alt="blue themed flowers" width="300"
-          height="300"></a>
-      <a href="https://stephjosie.github.io/calendar_app/">
-        <img class=active src="../portfolio_3/assets/images/cake.jpeg" alt="cake on plate" width="300" height="300"></a>
-      <a href="https://stephjosie.github.io/password_generator/">
-        <img class=active src="../portfolio_3/assets/images/drink.jpeg" alt="pineapple fruit in cup" width="300"
-          height="300"></a>
-      <a href="https://stephjosie.github.io/Quiz_1/">
-        <img class=active src="../portfolio_3/assets/images/tequila.jpeg" alt="Bottle of tequila" width="300"
-          height="300"></a>
-    </p>
-    <h2 id="contact">Contact</h2>
+      </div>
+      <div class="container">
+        <div class="card border-0">
+          <img src="../Portfolio/assets/images/IMG_5699.jpg" class="img" alt="Me Smiling">
 
-    <p>Phone:<a class=highlight href="tel:9512009636"> 951-200-9636</a>
-      Email:<a class=highlight href="sjapodaca1103@gmail.com"> sjapodaca1103@gmail.com</a>
-      Github: <a class=highlight href="https://github.com/StephJosie"> Github </a>
-      Linkedin: <a class=highlight href="https://www.linkedin.com/in/stephanie-apodaca-230711227/">Linkedin</a>
-    </p>
+        </div>
+      </div>
 
-    <h2 id="resume">Resume</h2>
-    <p>Add resume here</p>
+    </div>
+
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card text-center border-0">
+
+          <div class="card-body">
+            <h1 class="card-title" id="aboutme">About Me</h1>
+            <p class="card-text-center">My name is Stephanie Apodaca. I am a single mom and currently work for Kaiser
+              Permanente, San Diego.
+              I have been interested in accomplishing a coding bootcamp for a few years, I was recently given the
+              opportunity
+              to attend one. I enjoy photography and dog rescue. I look forward to improving on my portfolio.</p>
+
+          </div>
+        </div>
+
+      </div>
+      <div class="container">
+        <div class="card text-center mb-5 border-0">
+          <div class="card-body">
+            <h1 id="projects" class="card-title">Projects</h1>
+
+            <div class="card-deck">
+              <div class="card border-0">
+                <div class="card mx-auto mb-3 border-0" style="width: 18rem;">
+                  <div class="card-block">
+                    <h5>Git Cooking!</h5>
+
+                    <img class="card-img-top" src="./assets/images/Screen Shot 2022-01-24 at 11.50.38 AM.png"
+                      alt="cooking app">
+                    <div class="card-body">
+                      <p class="card-text">Git Cooking was my first group project. This app allows users to find a
+                        cocktail and entree, with directions on how to make them.</p>
+                      <a class="btn border" href="https://nmbeilke.github.io/Git-Cooking/">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                          class="bi bi-code" viewBox="0 0 16 16">
+                          <path
+                            d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z" />
+                        </svg>
+                      </a>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+              <div class="card border-0">
+                <div class="card mx-auto mb-3 border-0" style="width: 18rem;">
+                  <div class="card-block">
+                    <h5>Patient Care</h5>
+
+                    <img class="card-img-top" src="./assets/images/patientcare.png" alt="patient chart">
+                    <div class="card-body">
+                      <p class="card-text">Our patient care app was created as a group project. This app allows medical
+                        proffesionals to save patient information.</p>
+                      <a class="btn border" href="https://patient-care-app.herokuapp.com/login">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                          class="bi bi-code" viewBox="0 0 16 16">
+                          <path
+                            d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z" />
+                        </svg>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+                <div class="card border-0">
+                  <div class="card mx-auto mb-3 border-0" style="width: 18rem;">
+                    <div class="card-block">
+                      <h5>Employee Profiles</h5>
+
+                      <img class="card-img-top" src="./assets/images/employeeprofiles.png"
+                        alt="list of card withh employees">
+                      <div class="card-body">
+                        <p class="card-text">This project was created as a homework assignment for UCSD bootcamp. This
+                          is an app that creates profiles of employees within a company.</p>
+
+                        <a class="btn border" href="https://github.com/StephJosie/employee_questioins">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-code" viewBox="0 0 16 16">
+                            <path
+                              d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z" />
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+                <div class="card border-0">
+                  <div class="card mx-auto mb-3 border-0" style="width: 18rem;">
+                    <div class="card-block">
+                      <h5>Coding Quiz</h5>
+
+                      <img class="card-img-top" src="./assets/images/quiz.png" alt="quiz snapshot">
+                      <div class="card-body">
+                        <p class="card-text">This app allows users to test their basic coding term knowledge.
+                        </p>
+                        <a class="btn border" href="https://stephjosie.github.io/Quiz_1/">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-code" viewBox="0 0 16 16">
+                            <path
+                              d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z" />
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+
+
+
+
+
+                <div class="card-body">
+                  <h5 id="contact" class="card-title">Contact</h5>
+                  <p class="card-text">Phone:<a class=highlight href="tel:9512009636"> 951-200-9636</a>
+                    Email:<a class=highlight href="sjapodaca1103@gmail.com"> sjapodaca1103@gmail.com</a>
+                    Github: <a class=highlight href="https://github.com/StephJosie"> Github </a>
+                  </p>
+
+                </div>
+
+                <h2 id="resume">Resume</h2>
+                <p>Add resume link here</p>
+              </div>
+            </div>
 
 </body>
 
-<footer>
-  <h3>Made with 💕 by Stephanie Apodaca </h3>
+<footer class="text-center">
+  <h7 class="footer text-center text-muted">Made with 💕 by Stephanie Apodaca </h7>
 
 </footer>
+
+
+
+
 
 </html>
